Swagger: генерируем интерфейсы контроллеров и модели в папки проекта
