# src/main/resources/static/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   description: Описание тестового проекта
-  version: '1.1'
+  version: '1.0'
   title: Тестовый проект
   termsOfService: Free to use
   contact:
@@ -19,7 +19,7 @@ tags:
   - name: expense-controller
     description: Expense Controller
 paths:
-  /categories:
+  /category:
     get:
       tags:
         - category-controller
@@ -41,7 +41,6 @@ paths:
         '404':
           description: Not Found
       deprecated: false
-  /category:
     post:
       tags:
         - category-controller
